--- a/index.html
+++ b/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Todo-List</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <script src="script.js"></script>
-        <div class="container">
-            <h1>My To-Do List</h1>
-            <div class="input-section">
-                <input type="text" id="taskInput"
-                    placeholder="add a new task" />
-                <button id="addTaskBtn">Add</button>
-            </div>
-            <ul id="taskList">
-                <div class="completed">
-                    <li>milk</li>
-                    <li>sugar</li>
-                    <li>oil</li>
-
-                </div>
-                
-            </ul>
-        </div>
-    </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>To-Do List</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>My To-Do List</h1>
+    <div class="input-section">
+      <input type="text" id="taskInput" placeholder="Add a new task" />
+      <button id="addTaskBtn">Add</button>
+    </div>
+    <ul id="taskList"></ul>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
